<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague" translatable="false">Premier League</string>
    <string name="primeradivison" translatable="false">Primera Division</string>
    <string name="seriaa" translatable="false">Serie A</string>
    <string name="matchday_text" translatable="false">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final" translatable="false">Quarter Final</string>
    <string name="semi_final" translatable="false">Semi Final</string>
    <string name="final_text" translatable="false">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="api_key" translatable="false">ff451c1a5f854613b7d3a6de5e23d607</string>
    <string name="base_url_football" translatable="false">http://api.football-data.org/alpha/fixtures/</string>
    <string name="base_url_soccerseasons" translatable="false">http://api.football-data.org/alpha/soccerseasons/</string>
    <string name="fixtures" translatable="false">fixtures</string>
    <string name="links" translatable="false">_links</string>
    <string name="soccerseasons" translatable="false">soccerseason</string>
    <string name="self" translatable="false">self</string>
    <string name="date" translatable="false">date</string>
    <string name="hometeam" translatable="false">homeTeamName</string>
    <string name="awayteam" translatable="false">awayTeamName</string>
    <string name="result" translatable="false">result</string>
    <string name="goalteam" translatable="false">goalsHomeTeam</string>
    <string name="goalaway" translatable="false">goalsAwayTeam</string>
    <string name="matchday" translatable="false">matchday</string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="query_time_frame" translatable="false">timeFrame</string>
    <string name="get_method" translatable="false">GET</string>
    <string name="header_property" translatable="false">X-Auth-Token</string>
    <string name="log_exception_txt">Exception here</string>
    <string name="err_stream">Error Closing Stream</string>
    <string name="err_connect_server">Could not connect to server.</string>
    <string name="dateformat_seconds" translatable="false">yyyy-MM-ddHH:mm:ss</string>
    <string name="dateformat_min" translatable="false">yyyy-MM-dd:HH:mm</string>
    <string name="dateformat" translatable="false">yyyy-MM-dd</string>
    <string name="dateformat_fulldayname">EEEE</string>
    <string name="time_zone" translatable="false">UTC</string>
    <string name="share_button_match">Share button detail match</string>
    <string name="league_match">League match</string>
    <string name="app_description">description of the app</string>
    <string name="matches_list_descr" translatable="false">list of matches</string>
    <string name="home_img_descr">home shield</string>
    <string name="hometeam_descr">home name team</string>
    <string name="score_match_descr" translatable="false">score match</string>
    <string name="data_match_descr">data of match</string>
    <string name="away_img_descr">away shield</string>
    <string name="awayteamname_descr">away team name</string>
    <string name="frame_layout_match_descri">detail and share item match</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="txtWidgetHome">widget text of home name</string>
    <string name="txtWidgetAway">widget text of away name</string>
    <string name="txtWidgetScore">score of match</string>
    <string name="txtWidgetDate">date of match in widget</string>
    <string name="pager_current_bundle" translatable="false">Pager_Current</string>
    <string name="selected_match_bundle" translatable="false">Selected_match</string>
    <string name="main_pager_fragment_name" translatable="false">my_main</string>
    <string name="contentshare_type" translatable="false">text/plain</string>
    <!-- databases query's-->
    <string name="drop_table_query" translatable="false">"DROP TABLE IF EXISTS "</string>
    <string name="create_trable_query" translatable="false">"CREATE TABLE "</string>
    <string name="integer_primary_key_query" translatable="false">" INTEGER PRIMARY KEY,"</string>
    <string name="text_not_null_query" translatable="false">" TEXT NOT NULL,"</string>
    <string name="integer_not_null_query" translatable="false">" INTEGER NOT NULL,"</string>
    <string name="unique_query" translatable="false">" UNIQUE ("</string>
    <string name="on_conflict_query" translatable="false">) ON CONFLICT REPLACE</string>
    <string name="end_query" translatable="false">" );"</string>
    <string name="query_parent" translatable="false">" ("</string>

    <!-- leagues-->
    <string name="league_seriea">Seria A</string>
    <string name="league_premier">Premier League</string>
    <string name="league_uefa">UEFA Champions League</string>
    <string name="league_primeradivision">Primera Division</string>
    <string name="league_bundesliga">Bundesliga</string>
    <string name="league_unknow">Not known League Please report</string>
    <!-- match day-->
    <string name="matchday_group">Group Stages, Matchday : 6</string>
    <string name="matchday_first_knockout">First Knockout round</string>
    <string name="matchday_quarter">QuarterFinal</string>
    <string name="matchday_semifinal">SemiFinal</string>
    <string name="matchday_final">Final</string>
    <string name="matchday_defaultvalue">"Matchday : "</string>
    <!-- name of teams-->
</resources>
