<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/txtWidgetHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/txtWidgetHome"
        android:gravity="center"
        android:text="@string/test_text"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWidgetScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txtWidgetScore"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/txtWidgetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txtWidgetDate"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtWidgetAway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/txtWidgetAway"
        android:gravity="center"
        android:text="@string/test_text"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>